name:                ueberzug
version:             0.1.0.0
synopsis:            Haskell bindings to ueberzug to display images in the terminal
-- description:
homepage:            https://github.com/akazukin5151/ueberzug-hs#readme
license:             MIT
license-file:        LICENSE
author:              Tsui Yik Ching
maintainer:          tsuiyikching@protonmail.com
copyright:           2022 Tsui Yik Ching
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Ueberzug
  build-depends:       base >= 4.7 && < 5,
                       process >= 1.6.13.2 && < 1.7
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Wno-missing-exported-signatures
                       -Wno-missing-import-lists
                       -Wno-missed-specialisations
                       -Wno-all-missed-specialisations
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
                       -Wno-implicit-prelude
                       -Wno-prepositive-qualified-module
                       -Wno-missing-deriving-strategies

source-repository head
  type:     git
  location: https://github.com/akazukin5151/ueberzug-hs

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    base, ueberzug
  ghc-options:      -fno-ignore-asserts
  default-language: Haskell2010
